# Atlas2D

./: CMakeLists.txt  README.md  TODO.pregnant  TODO.txt
builds/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
docs/: NamingConventions.md  greedyStackRectPackAlgorithm.md
include/: animator.h  context.h  gameScript.h  objGen.h  orthoCamera.h  renderer.h  shader.h  sprite.h  transform.hpp
projectFiles/: knight.cpp  main.cpp  staticSprites.cpp
projectFiles/include/: knight.h  staticSprites.h
src/: context.cpp  gameScript.cpp  orthoCamera.cpp  renderer.cpp  sprite.cpp
src/shaders/: baseFragmentShader.fs  baseVertexShader.vs
src/util/: animator.cpp  objGen.cpp  shader.cpp
